p3/confs/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-app
  namespace: dev
  labels:
    app: iot-app
spec:
  selector:
    app: iot-app
  ports:
    - name: http
      port: 80
      targetPort: 80
